--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,6 +1,6 @@
 <header>My Surveys!</header>
 
-<article class="surveys">
+<article class="survey">
   <section class="titles">
     <% @surveys.all.each do |survey| %>
         <%= link_to survey.title, survey %>
