--- a/app/assets/stylesheets/global/site.css.scss
+++ b/app/assets/stylesheets/global/site.css.scss
@@ -1,3 +1,12 @@
+body {
+  background-color: $primaryBlue;
+}
+
+.content {
+  @include layout;
+  padding-top: 20px;
+}
+
 a {
   @include regular-font;
   text-decoration: none;
