Change hover color on choices

--- a/app/assets/stylesheets/surveys/survey.css.scss
+++ b/app/assets/stylesheets/surveys/survey.css.scss
@@ -46,8 +46,7 @@ header {
           }
 
           &:hover{
-            background-color: $darkGreen;
-            color: white;
+            background-color: $lightGreen;
           }
         }
 
