Create new survey form and action

--- a/app/assets/stylesheets/global/site.css.scss
+++ b/app/assets/stylesheets/global/site.css.scss
@@ -1,5 +1,6 @@
 body {
   background-color: $primaryBlue;
+  @include regular-font;
 }
 
 .content {
@@ -18,4 +19,39 @@ a {
   &:hover {
     color: $darkGreen;
   }
+}
+
+form {
+
+  input[type="text"] {
+    border: 1px solid black;
+  }
+
+  input.button {
+    border: none;
+    background-color: $green;
+    color: white;
+    display: block;
+    height: 30px;
+    padding: 0 10px;
+    @include h5;
+
+    &:hover {
+      background-color: $darkGreen;
+    }
+  }
+
+  .errors {
+    color: $errorColor;
+    padding: 5px 0;
+  }
+
+  .field_with_errors {
+    display: inline-block;
+
+    &.input[type="text"] {
+      border-color: $errorColor;
+    }
+  }
+
 }
