--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -6,7 +6,10 @@
 
 <article class="survey">
   <section class="new-survey-form">
-    <%= form_for @survey do |survey_form| %>
+
+
+
+    <%= nested_form_for @survey do |survey_form| %>
       <% if @survey.errors.any? %>
         <div class="errors">
          <ul>
@@ -22,50 +25,13 @@
 
       <div class="questions">
 
-        <%= survey_form.fields_for :questions do |question_form| %>
-          <%= render "question_form", question_form: question_form %>
-        <% end %>
-
-        <div class="templates">
-          <%= survey_form.fields_for :questions do |question_form| %>
-            <%= render "question_form", question_form: question_form %>
-          <% end %>
-        </div>
+        <%= survey_form.fields_for :questions %>
+        <p><%= survey_form.link_to_add "Add question", :questions %></p>
 
       </div>
 
-      <%= link_to "Add question", "#", class: "add-question" %>
 
       <%= survey_form.submit "Create", class: "create-survey button" %>
     <% end %>
   </section>
 </article>
-
-
-
-
-<script>
-  $(".create-survey").click( function(){
-    $("form.new_survey .templates").remove();
-    cleanupEmptyQuestions();
-    return true;
-  });
-
-  $(".add-question").click( function(){
-    showQuestionForm();
-    return false;
-  });
-
-  function showQuestionForm() {
-    var questionsContainer = $('.questions');
-    var newQuestionTemplate = $('.templates .question-form');
-    var newForm = newQuestionTemplate.clone();
-    questionsContainer.append(newForm);
-  }
-
-  function cleanupEmptyQuestions() {
-    $("form.new_survey .templates").remove();
-
-    $('form.new_survey .questions :input[value=""]').attr('disabled', true);
-  }
-</script>
